<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/head_title"/>
    <com.example.shenfei.tools.views.SoundDiscView android:id="@+id/soundDiscView" android:paddingBottom="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:src="@drawable/noise_disc_1" android:layout_below="@+id/opinion_title" android:layout_centerInParent="true"/>
    <TextView android:textSize="16sp" android:textColor="@color/text_dark" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="单位: 分贝" android:layout_below="@+id/opinion_title" android:layout_alignParentRight="true"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/txt" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_below="@+id/soundDiscView">
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
            <TextView android:textSize="16sp" android:textColor="@color/gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="最大"/>
            <TextView android:textSize="16sp" android:textColor="@color/gray" android:id="@+id/txt_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0"/>
        </LinearLayout>
        <TextView android:textSize="40sp" android:gravity="center" android:id="@+id/txt_center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="0" android:layout_weight="1"/>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
            <TextView android:textSize="16sp" android:textColor="@color/gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="平均"/>
            <TextView android:textSize="16sp" android:textColor="@color/gray" android:id="@+id/txt_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0"/>
        </LinearLayout>
    </LinearLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/txt">
        <LinearLayout android:orientation="vertical" android:paddingLeft="20dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16sp" android:textColor="@color/gray" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/id_0_20"/>
            <View android:background="@color/divider" android:layout_width="match_parent" android:layout_height="1dp"/>
            <TextView android:textSize="16sp" android:textColor="@color/gray" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/id_20_40"/>
            <View android:background="@color/divider" android:layout_width="match_parent" android:layout_height="1dp"/>
            <TextView android:textSize="16sp" android:textColor="@color/gray" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/id_40_60"/>
            <View android:background="@color/divider" android:layout_width="match_parent" android:layout_height="1dp"/>
            <TextView android:textSize="16sp" android:textColor="@color/gray" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/id_60_70"/>
            <View android:background="@color/divider" android:layout_width="match_parent" android:layout_height="1dp"/>
            <TextView android:textSize="16sp" android:textColor="@color/gray" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/id_70_90"/>
            <View android:background="@color/divider" android:layout_width="match_parent" android:layout_height="1dp"/>
            <TextView android:textSize="16sp" android:textColor="@color/gray" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/id_90_110"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
